# ALGORITMICA-2122

./: CORRECCIONES_PRACTICAS_IMPLEMENTAR.txt  README.md
PRACTICA1/ENTREGA/LorenzoSanchez_Completa/: CMakeLists.txt  ClaseTiempo.cpp  MainProgram.cpp  MainProgram.hpp  Makefile  OrdenacionSeleccion.eps  ProductoMatricesCuadradas.eps  fibbonnaci.eps  funcionesComunes.cpp  funcionesComunes.hpp  ordenacionSeleccion.hpp  productoMatricesCuadradas.hpp
PRACTICA1/PROPIO/: OrdenacionSeleccion.eps  ProductMatricesCuadradas.eps  ProductoMatricesCuadradas_gnuplot.sh  algoritmos.cpp  algoritmos.hpp  datosFinales.txt  datosFinalesOrdenacionSeleccion.txt  datosFinalesProductoMatrices.txt  datosRealesOrdenacionSeleccion.txt  datosRealesProductoMatrices.txt  fibonacci.cpp  fibonacci.hpp  funcionamiento  funcionesAuxiliares.hpp  funcionesComunes.cpp  funcionesPrincipales.cpp  funcionesauxiliares.cpp  makefile  matrices.cpp  ordenacionSeleccion.cpp  ordenacionSeleccion_gnuplot.sh  practica1.cpp  productoMatricesCuadradas.cpp  productoMatricesCuadradas.hpp  tiempoReales.txt  vector.cpp
PRACTICA2/: MainProgram.cpp  funcionesComunes.cpp  funcionesComunes.hpp  makefile  ordenacionQuickSort.cpp  ordenacionQuickSort.hpp
PRACTICA2/fuentes/: MainProgram.cpp  (+3 more)
PRACTICA4/LorenzoSanchez/: CMakeLists.txt  MainProgram.cpp  ProblemaCambio.cpp  ProblemaCambio.hpp  ProblemaMochila.cpp  ProblemaMochila.hpp  sistemamonetario.txt
PRACTICA5/: pseudocodigo.txt
PRACTICA5/LorenzoSanchez/: CMakeLists.txt  MainProgram.cpp  reinas.cpp  reinas.hpp
PROFESOR/: matriz.hpp
PROPIO/: algoritmos.hpp
(+32 files in other folders)
